--- a/public/admin_assets/css/styles.css
+++ b/public/admin_assets/css/styles.css
@@ -11241,3 +11241,7 @@ body {
   font-size: 0.75rem;
   border-radius: 0.375rem !important;
 }
+
+.background-image{
+  background-image: url('../images/ecom-bg-login-image.jpg');background-position: center;background-size: cover;background-repeat: no-repeat;
+}
